--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.12.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-popover": "1.0.5",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@tanstack/react-query": "^4.28.0",
@@ -28,6 +29,7 @@
     "next-auth": "^4.21.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
